tests/facebook_fbt_none/facebook_fbt_none.exp
Error: main.js:4
  4: (<fbt />: number); // Error: ReactElement ~> number
      ^^^^^^^ React element `fbt`
  4: (<fbt />: number); // Error: ReactElement ~> number
               ^^^^^^ number. This type is incompatible with
                                                                   v-
156: declare type React$Element<+ElementType: React$ElementType> = {|
157:   +type: ElementType,
158:   +props: React$ElementProps<ElementType>,
...:
161: |};
     -^ object type. See lib: <BUILTINS>/react.js:156


Found 1 error
